# assistant-copepodes-specs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DATA_ACCESS_METHODS.md  DATA_DICTIONARY.md  IMPLEMENTATION_ORDER.md  PLAN.md  PROJET_IDEA_ZOOPLANCTON.md  RAPPORT_FINAL.md  README.md  TEST_SCENARIOS.md  TOOLS_AGENT_PLAN.md  TOOLS_SPEC.js  cartographie_donnée.md  handoff_jeudi28.md  pyproject.toml
STAGE ULAVAL/: Projet — Intelligent Data Exploring Assistant pour le compépodes.md  README.md
STAGE ULAVAL/ANALYSE EXIGENCE/: Plan Élicitation.md
STAGE ULAVAL/Analyse sur les données/: Cartographie des sources de donnees.md
amundsen_data_probe/: README.md  requirements.txt
amundsen_data_probe/outputs/: report.md  (+1 more)
data_exploration/: IMPLEMENTATION_PLAN_OGSL_BIO_ORACLE.md  README.md  copepod_jointure_hierarchy.md
docs/: CONTEXT.md  DATA_ACCESS_METHODS.md  DOCUMENTATION_STATUS.md  FOLDER_MAP.md  PRD_IDEA_copepod.docx  PRD_IDEA_copepod.md  PRD_IDEA_copepod_diagrams.docx  REPO_GUIDE.md  SCRIPT_TO_TOOL_MCP_MAP.md
ecopart_1165_link_probe/: README.md
ecotaxa_loki_probe/: README.md
examples_tsv/: README.md  amundsen_12713_ctd_2018_sample.tsv  amundsen_12713_ctd_ips007_match_sample.tsv  loki_2331_ecotaxa_export_sample_50.tsv  uvp_amundsen_105_ecopart_vs_amundsen_ctd_compare.tsv
tests/: conftest.py  test_analysis.py  test_calc.py  test_columns.py  test_completeness.py  test_context.py  test_data.py  test_deliverable.py  test_domain.py  test_joins.py  test_session.py  test_sources.py
visualization/: README.md  data.js  index.html  notes.js
(+79 files in other folders)
