[project]
name = "polar-data-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "requests",
    "python-dotenv",
    "beautifulsoup4",
    "xarray",
    "netCDF4",
    "chromadb",
    "sentence-transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["polar_data_tools"]
